# fastmodel

./: README.md  pyproject.toml  pyvenv.cfg
fastmodel/: __init__.py  __main__.py
fastmodel/cli/: __init__.py
fastmodel/http/: __init__.py
scripts/: run_dev.sh  setup_dev.sh
