[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastmodel"
description = "The FastModel project"
readme = "README.md"
requires-python = ">=3.7"
license = "AGPL-3.0-or-later"
keywords = []
authors = [
  { name = "Bobby Chen", email = "chenbobby168@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
]
dependencies = [
  "click",
  "fastapi",
  "uvicorn",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/fastmodel#readme"
Issues = "https://github.com/unknown/fastmodel/issues"
Source = "https://github.com/unknown/fastmodel"

[project.scripts]
fastmodel = "fastmodel:main"

[tool.hatch.version]
path = "fastmodel/__about__.py"

[tool.hatch.build.targets.sdist]
[tool.hatch.build.targets.wheel]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=fastmodel --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "fastmodel/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
